--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hitme-admin-panel",
+  "name": "profile-engels",
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "prepare": "ng build --base-href \"https://ipod1987.github.io/profile/\"",
+    "upload": "npx angular-cli-ghpages --dir=dist/engels"
   },
   "private": true,
   "dependencies": {
